fixed layout issue where header was hiding background on border radiues

--- a/src/app/components/background/background.module.scss
+++ b/src/app/components/background/background.module.scss
@@ -2,7 +2,7 @@
 $background: var(--background);
 .wrapper {
     position: absolute;
-    top: -4rem;
+    margin: -4rem;
     left: 0;
     right: 0;
     bottom: 0;
